# personal-nextjs-server

./: .gitignore  PRIVACY_POLICY.md  build.txt  build2.txt  build3.txt  build4.txt  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
extension/: README.md  background.js  content.js  manifest.json  rules.json
extension/_metadata/generated_indexed_rulesets/: _ruleset1
public/: .htaccess
public/wasm/: package.json  surge_wasm.d.ts  surge_wasm.js  surge_wasm_bg.wasm  surge_wasm_bg.wasm.d.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/json-nexus/: layout.tsx  page.tsx
src/app/surge/: layout.tsx  page.tsx
src/components/: Polyfill.tsx
src/components/agent/: AgentChatPanel.tsx  AgentMessageItem.tsx  AgentSettingsView.tsx  EtherealAiSymbol.tsx  agent-adapters.ts  agent-prompts.ts  render-markdown.tsx  useAgent.ts  useSurgeAgentTools.ts
src/components/api-client/: ApiClientWorkspace.tsx  CollectionSidebar.tsx  EnvironmentModal.tsx  RequestPanel.tsx  ResponsePanel.tsx
src/components/editor/: RequestDesigner.tsx
src/components/execution/: ExecutionPanel.tsx
src/components/ui/: table.tsx  (+6 more)
src/lib/: agent-executor.ts  config.ts  curl.ts  dns.ts  executor-utils.ts  executor.ts  executor.worker.ts  extension.ts  file-utils.ts  flattener.ts  frontend-executor.ts  hooks.ts  parser.worker.ts  postman.ts  sandbox.ts  schema.ts  store-db.ts  store-helpers.ts  store.ts  strip-comments.ts  surge-docs.ts  test-api-client.ts  test-flattener.ts  transitions.ts  utils.ts
src/lib/surge-wasm/: Cargo.toml
src/lib/surge-wasm/src/: lib.rs
(+22 files in other folders)
