[package]
name = "surge-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde-wasm-bindgen = "0.6"
calamine = { version = "0.35.0", features = ["chrono"] }
csv = "1.4.0"
chrono = "0.4"

